--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,11 +20,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        cp settings.example.py settings.py
     - name: Lint with pylint
       run: |
         pip install pylint
         pylint --disable=C0302,E0611,C0103,R0914,R1702,R0912,R0915,R0913 run.py
-    - name: Test with pytest
+    - name: Verify app compiles
       run: |
-        # Verify app compiles and returns help
         python run.py --help
