--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
-name: Python Compile and PEP 8 Check
+name: Build
 
-on:
-  pull_request:
-    branches:
-    - master
+on: push
 
 jobs:
   build:
@@ -11,11 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/cache@v1
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.x
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
