--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         pip install pylint
         pylint --disable=C0302,E0611,E1101,C0103,R0914,R1702,R0912,R0915,R0913 run.py
+        pylint --disable=R0201,R0913,R0914 templates/netbox.py
     - name: Verify app compiles
       run: |
         python run.py --help
